--- a/DesktopApp/MainPage.xaml
+++ b/DesktopApp/MainPage.xaml
@@ -5,15 +5,30 @@
     xmlns:local="using:DesktopApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:w2d="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Image x:Name="depthImage"  Stretch="Uniform"/>
-        <Image x:Name="irImage" Grid.Column="1" Stretch="Uniform"/>
+    <Grid Background="LightSlateGray">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Margin="0,10,0,0" HorizontalAlignment="Center">
+            <TextBlock Text="{x:Bind StatusText,Mode=OneWay}" Margin="0,10,0,0" Grid.Row="0" TextAlignment="Center"/>
+            <TextBlock Text="{x:Bind SourceDescription,Mode=OneWay}" Grid.Row="1" TextAlignment="Center"/>
+        </StackPanel>
+        <Image Grid.Row="1" x:Name="image"  Stretch="None" RenderTransformOrigin="0.5,0.5">
+            <Image.RenderTransform>
+                <RotateTransform/>
+            </Image.RenderTransform>
+        </Image>
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5" HorizontalAlignment="Right">
+            <Button Click="{x:Bind OnPreviousStream}" Content="Previous Stream" Margin="5" HorizontalAlignment="Center"/>
+            <Button Click="{x:Bind OnNextStream}" Content="Next Stream" Margin="5" HorizontalAlignment="Center"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5" HorizontalAlignment="Left">
+            <Button Click="{x:Bind OnRotateLeft}" Content="Rotate Left" Margin="5" HorizontalAlignment="Center"/>
+            <Button Click="{x:Bind OnRotateRight}" Content="Rotate Right" Margin="5" HorizontalAlignment="Center"/>
+        </StackPanel>
     </Grid>
 </Page>
